# fast_bench

./: .gitignore  main.py  pyproject.toml  requirements.txt  settings.py
src/: database.py  models.py  routers.py
src/router/: index.py
